--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
 
                     <input id="tab3" type="radio" class="w3layouts-sm" name="tabs">
                     <label for="tab3"><span class="fa fa-files-o" aria-hidden="true"></span>Projects</label>
+
                     <input id="tab4" type="radio" class="w3layouts-sm" name="tabs">
                     <label for="tab4"><span class="fa fa-envelope" aria-hidden="true"></span> Contact</label>
+
                     <section id="content1" class="inner-w3layouts-wrap">
                         <img src="images/app.png" class="admin img-fluid" alt="skishan781">
                         <h2>Hi I'm Kishan Kumar Sharma</h2>
@@ -63,7 +65,7 @@
 
                     <section id="content2" class="inner-w3layouts-wrap">
                         <h3 class="head-w3ls">What I do</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras lobortis mollis arcu, vel vulputate justo consectetur quis. Donec quis fringilla arcu lorem ipsum dolor sit amet nullam. Consequat adipiscing phasellus.
+                        <p>I develop mobile application for Android. I also have an experience working with data science and web development projects.
                             Donec cursus nunc ut rhoncus volutpat. Suspendisse dictum volutpat orci sit amet consequat. Duis fermentum urna et ligula lacinia faucibus efficitur non sapien. Nulla cursus arcu sapien. Nulla luctus tellus dapibus erat tincidunt feugiat. Suspendisse potenti lorem ipsum dolor. Magna sed risus bibendum, ullamcorper risus eget, accumsan odio. Ut ornare mi aliquet, ultrices velit vitae tempor augue </p>
                     </section>
 
@@ -72,18 +74,16 @@
                         <h3 class="head-w3ls">See My Latest Works.</h3>
                         <div class="row news-grids text-center">
                             <div class="col-4 gal-img">
-                                <a href="#gal1"><img src="images/g1.jpg" alt="news image" class="img-fluid"></a>
-                                <a href="#gal2"><img src="images/g3.jpg" alt="news image" class="img-fluid"></a>
-
-
+                                <a href="https://github.com/iamkishansharma/FreshNewzz"><img src="images/g1.jpg" alt="news image" class="img-fluid"></a>
+                                <a href="https://github.com/iamkishansharma/RunTracker"><img src="images/g3.jpg" alt="news image" class="img-fluid"></a>
                             </div>
+
                             <div class="col-4 gal-img">
-                                <a href="#gal3"><img src="images/g2.jpg" alt="news image" class="img-fluid"></a>
+                                <a href="https://github.com/iamkishansharma/AiZi"><img src="images/g2.jpg" alt="news image" class="img-fluid"></a>
                                 <a href="#gal4"><img src="images/g4.jpg" alt="news image" class="img-fluid"></a>
                             </div>
+
                             <div class="col-4 gal-img">
-
-
                                 <a href="#gal5"><img src="images/g5.jpg" alt="news image" class="img-fluid"></a>
                                 <a href="#gal6"><img src="images/g6.jpg" alt="news image" class="img-fluid"></a>
                             </div>
@@ -152,8 +152,8 @@
             </div>
         </div>
         <div class="copy-w3layouts-right text-center pb-3">
-            <p>© 2020 HeyCode Inc. All rights reserved | Design by
-                <a href="https://kishansharma.netlify.app"> Kishan Kr Sharma.</a>
+            <p>© 2021 HeyCode Inc. | Design by
+                <a href="https://linkedin.com/in/skishan781"> Kishan Kr Sharma.</a>
             </p>
 
         </div>
