--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
             </div>
         </div>
         <div class="copy-w3layouts-right text-center pb-3">
+            <p>Email: skishan781@gmail.com<p>
             <p>© 2021 HeyCode Inc. | Design by
                 <a href="https://linkedin.com/in/skishan781"> Kishan Kr Sharma.</a>
             </p>
-
         </div>
     </div>
     <!--//main-content-->
