Project url changed

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <div class="row news-grids text-center">
                             <div class="col-4 gal-img">
                                 <a href="https://github.com/iamkishansharma/FreshNewzz"><img src="images/g1.jpg" alt="news image" class="img-fluid"></a>
-                                <a href="https://github.com/iamkishansharma/RunTracker"><img src="images/g3.jpg" alt="news image" class="img-fluid"></a>
+                                <a href="#"><img src="images/g3.jpg" alt="news image" class="img-fluid"></a>
                             </div>
 
                             <div class="col-4 gal-img">
@@ -84,7 +84,7 @@
                             </div>
 
                             <div class="col-4 gal-img">
-                                <a href="#gal5"><img src="images/g5.jpg" alt="news image" class="img-fluid"></a>
+                                <a href="https://github.com/iamkishansharma/RunTracker"><img src="images/g5.jpg" alt="news image" class="img-fluid"></a>
                                 <a href="#gal6"><img src="images/g6.jpg" alt="news image" class="img-fluid"></a>
                             </div>
                             <!-- popup-->
