github link added

--- a/RunTracker/index.html
+++ b/RunTracker/index.html
@@ -94,7 +94,7 @@
                                         <h2 data-animation="fadeInUp" data-delay=".4s">Best <span>RunTracker</span> Mobile App </h2>
                                         <p data-animation="fadeInUp" data-delay=".6s">Aenean dictum odio dapibus turpis dapibus vestibulum. Mauris quis massa nisi. Nullam porta lorem at volutpat euismod. Proin in ex nunc.</p>
                                         <div class="slider-btn mt-30 mb-30">
-                                            <a href="#" class="btn ss-btn" data-animation="fadeInUp" data-delay=".8s">Read More</a>
+                                            <a href="https://github.com/iamkishansharma/RunTracker" class="btn ss-btn" data-animation="fadeInUp" data-delay=".8s">GitHub</a>
                                         </div>
                                     </div>
                                 </div>
