App download link added

--- a/RunTracker/index.html
+++ b/RunTracker/index.html
@@ -63,7 +63,7 @@
                             </div>
                             <div class="col-xl-2 text-right d-none d-xl-block">
                                 <div class="header-btn second-header-btn">
-                                    <a href="#" class="btn">Download</a>
+                                    <a href="https://github.com/iamkishansharma/RunTracker/releases/download/v1/RunTracker.apk" class="btn">Download</a>
                                 </div>
                             </div>
                         </div>
@@ -219,7 +219,7 @@
                                         <li>
                                             <div class="icon"><img src="img/icon/apw-Icon3.png"></div> 
                                             <div class="text">
-                                                <h4>Enjoy This App</h4>
+                                                <h4>Enjoy Your Run/Walk</h4>
                                                 <p>Aliquam varius ligula nec leo tempus porta. Vestibulum suscipit leo at nunc imperdiet, quis lacinia nisi euismod.</p>
                                             </div>
                                         </li>
