Social links added

--- a/RunTracker/index.html
+++ b/RunTracker/index.html
@@ -824,10 +824,10 @@
                                     <p>Sed ut perspiciatis unde om is nerror sit voluptatem accustium dolorem tium totam rem aperam quae.</p>
                                 </div>
                                 <div class="footer-social">
-                                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
-                                    <a href="#"><i class="fab fa-instagram"></i></a>
-                                    <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                                    <a href="https://www.facebook.com/heycodeinc/"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="https://www.linkedin.com/company/heycodeinc"><i class="fab fa-linkedin"></i></a>
+                                    <a href="https://www.instagram.com/heycodeinc/"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.github.com/heycodeinc"><i class="fab fa-github"></i></a>
                                 </div>
                             </div>
                         </div>
