--- a/index.html
+++ b/index.html
@@ -57,16 +57,15 @@
 
                     <section id="content1" class="inner-w3layouts-wrap">
                         <img src="images/app.png" class="admin img-fluid" alt="skishan781">
-                        <h2>Hi I'm Kishan Kumar Sharma</h2>
-                        <p>A Computer Science student, studying Data Science at LPU. I also develop Mobile Application and working with small business to grow their customer and launch their product on their platforms. </p>
+                        <h2>Kishan Kumar Sharma</h2>
+                        <p>I develop Mobile Applications with Android (Java/Kotlin), Flutter and React Native. I have worked with small business & startups to grow business through technology and launch product on their own platforms. Also, I love teaching technical stuff.</p>
                         <h3></h3>
                     </section>
 
 
                     <section id="content2" class="inner-w3layouts-wrap">
                         <h3 class="head-w3ls">What I do</h3>
-                        <p>I develop mobile application for Android. I also have an experience working with data science and web development projects.
-                            Donec cursus nunc ut rhoncus volutpat. Suspendisse dictum volutpat orci sit amet consequat. Duis fermentum urna et ligula lacinia faucibus efficitur non sapien. Nulla cursus arcu sapien. Nulla luctus tellus dapibus erat tincidunt feugiat. Suspendisse potenti lorem ipsum dolor. Magna sed risus bibendum, ullamcorper risus eget, accumsan odio. Ut ornare mi aliquet, ultrices velit vitae tempor augue </p>
+                        <p>I provide traning for Android Development and Cross Platform Development with Flutter & React Native. Freelance service in software development to small businesses & startups is also a part of my work. Apart from this, I also have an experience working with data science and web development projects because I'm a tech savvy.
                     </section>
 
 
